************************************
CHANGES IN VERSION 2.0.1dev

NEW FEATURES

   o Update R output with counts and annotation 

   o Add gene body coverage tool (RSeQC)

   o Add HiSat2 for hg19, hg19_base, hg38, mm9, mm10

   o Add tools.config [#56]

   o Support sample_plan and reads as input [#60]

   o Update conda environment

   o Remove picard from multiQC report

   o Add gene-based saturation curves [#57]

   o Add gene type expression (gencode) [#58]

   o Add exploratory analysis in multiQC report [#44]

BUG FIXES

   o Fix minor bugs [#48, #62, #63]

***********************************
CHANGES IN VERSION 2.0.0dev

NEW FEATURES

   o Initialise release of RNA-seq pipeline


