@@ -3,15 +3,7 @@
 #
 #################################################################
 
-title: RNA-seq 
-subtitle: Institut Curie NGS/bioinformatics platform
-intro_text: >
-   This report has been generated by the RNA-seq analysis pipeline.
-//custom_logo: 'institut_curie.jpg'
-custom_logo_url: https://science.curie.fr/plateformes/sequencage-adn-haut-debit-ngs/
-custom_logo_title: Institut Curie
 skip_generalstats: true
-
 read_count_multiplier: 0.000001
 read_count_prefix: 'M'
 read_count_desc: 'millions'
