@@ -15,17 +15,29 @@
 ##############################################################################
 
 import os
+import re
 import argparse
 from collections import OrderedDict
 
 parser = argparse.ArgumentParser()
-parser.add_argument("metadata")
+parser.add_argument("-n", "--name", help="Pipeline name")
+parser.add_argument("-v", "--version", help="Pipeline version", default='')
+parser.add_argument("-m", "--metadata", help="Metatdata file", default=None)
 args = parser.parse_args()
-    
-multiqc_list = ["custom_logo: '{}'".format(os.sep.join([
-    os.path.dirname(os.path.realpath(__file__)), 'institut_curie.jpg']))]
-multiqc_list += ["report_header_info:"]
 
+multiqc_list = ["title: '{}'".format(args.name)]
+multiqc_list += ["subtitle: Institut Curie NGS/Bioinformatics core facilities"]
+multiqc_list += ["intro_text: >\n This report has been generated by the RNA-seq analysis pipeline (v{})".format(args.version)]
+
+if re.match(r".*dev$", args.version):
+    multiqc_list +=["report_comment: >\n This software is currently under active development and the results have been generated with a non stable version. The reliability, reproducibility and the quality of the results are therefore not guaranteed."]
+
+multiqc_list += ["custom_logo: '{}'".format(os.sep.join([
+    os.path.dirname(os.path.realpath(__file__)), '../assets/institut_curie.png']))]
+multiqc_list += ["custom_logo_title: Institut Curie"]
+multiqc_list += ["custom_logo_url: https://science.curie.fr/plateformes/sequencage-adn-haut-debit-ngs/"]
+
+multiqc_list += ["report_header_info:"]
 if args.metadata is not None:
     # create rims dict
     rims_dict = OrderedDict([
