@@ -3,7 +3,9 @@ CHANGES IN VERSION 2.0.1dev
 
 NEW FEATURES
 
-   o Update R output with counts and annotation 
+   o Add disclamer in log and mqc report for devel
+
+   o Update R output with counts and annotation
 
    o Add gene body coverage tool (RSeQC)
 
